<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ke.co.realcodes.farmpm.ProfileActivity"
    tools:showIn="@layout/profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            >
            <TextView
                android:id="@+id/profile_header_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/profile_info_text"
                />
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/username_profile_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textCursorDrawable="@drawable/cursor"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:hint="@string/hint_username"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelText="@string/hint_username"
                app:met_floatingLabelTextColor="@color/colorPrimary"
                app:met_floatingLabelTextSize="@dimen/floating_hint"
                app:met_floatingLabelAnimating="true"
                android:text=""
                />
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/fname_profile_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textCursorDrawable="@drawable/cursor"
                android:hint="@string/hint_fname"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelText="@string/hint_fname"
                app:met_floatingLabelTextColor="@color/colorPrimary"
                app:met_floatingLabelTextSize="@dimen/floating_hint"
                app:met_floatingLabelAnimating="true"
                android:text=""
                />
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/lname_profile_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textCursorDrawable="@drawable/cursor"
                android:hint="@string/hint_lname"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelText="@string/hint_lname"
                app:met_floatingLabelTextColor="@color/colorPrimary"
                app:met_floatingLabelTextSize="@dimen/floating_hint"
                app:met_floatingLabelAnimating="true"
                android:text=""
            />
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/location_profile_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textCursorDrawable="@drawable/cursor"
                android:hint="@string/hint_location"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelText="@string/hint_location"
                app:met_floatingLabelTextColor="@color/colorPrimary"
                app:met_floatingLabelTextSize="@dimen/floating_hint"
                app:met_floatingLabelAnimating="true"
                android:text=""
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <info.hoang8f.widget.FButton
                android:id="@+id/finish_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:text="@string/finish_button_text"
                android:textColor="@color/terms_button_text"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_gravity="center"
                fbutton:buttonColor="@color/terms_button_color"
                fbutton:shadowColor="@color/terms_button_color"
                fbutton:shadowEnabled="false"
                fbutton:shadowHeight="5dp"
                fbutton:cornerRadius="5dp" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
