<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context="ke.co.realcodes.farmpm.VerifyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/verify_actionbar" />

        <TextView
            android:id="@+id/verification_phone_number_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin" />
        <TextView
            android:id="@+id/wrong_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify_text"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:gravity="center"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/verification_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:textAlignment="center"
            android:textCursorDrawable="@drawable/cursor"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="100dp"
            android:layout_marginLeft="100dp"
            android:maxLength="8"
            />

        <TextView
            android:id="@+id/verify_code_input_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/verify_text_for_input"
            android:textSize="@dimen/charges_font" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            >
            <TextView
                android:id="@+id/resend_text"
                android:text="@string/resend_code_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:clickable="true"
                />
            <TextView
                android:id="@+id/resend_countdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center"
                android:gravity="center"
                android:clickable="true"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        >
        <info.hoang8f.widget.FButton
            android:id="@+id/verify_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:text="@string/verify_button_text"
            android:textColor="@color/terms_button_text"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_gravity="center"
            fbutton:buttonColor="@color/terms_button_color"
            fbutton:shadowColor="@color/terms_button_color"
            fbutton:shadowEnabled="false"
            fbutton:shadowHeight="5dp"
            fbutton:cornerRadius="5dp" />
    </LinearLayout>
</RelativeLayout>
